--- a/app/views/admin/application/_object.html.haml
+++ b/app/views/admin/application/_object.html.haml
@@ -1,3 +1,3 @@
 %tr
   = render 'row', object: object
-  %td= link_to icon("trash-o"), object, class: "btn btn-default", id: "delete_#{model_sym.to_s}_#{object.id}", method: :delete, data: { confirm: "Are you sure you want to delete this #{model_name}?" }
+  %td= link_to "Delete", object, class: "btn btn-default", id: "delete_#{model_sym.to_s}_#{object.id}", method: :delete, data: { confirm: "Are you sure you want to delete this #{model_name}?" }
