use application controller if model-specific one does not exist

--- a/app/views/admin/application/_table.html.haml
+++ b/app/views/admin/application/_table.html.haml
@@ -1,8 +1,7 @@
 %table.table.table-striped.table-admin
   %thead
     %tr
-      - headers.each do |text|
-        %th= text
+      = render "headers"
       %th Actions
   %tbody
     = render partial: 'object', collection: @collection, as: :object
