change module name

--- a/app/views/storytime_admin/application/_navigation.html.haml
+++ b/app/views/storytime_admin/application/_navigation.html.haml
@@ -6,7 +6,7 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      = link_to Admin.nav_title, root_url, class: "navbar-brand"
+      = link_to StorytimeAdmin.nav_title, root_url, class: "navbar-brand"
     #navbar-collapse.collapse.navbar-collapse
       %ul.nav.navbar-nav
         = render "links"
