--- a/app/views/storytime_admin/application/index.html.haml
+++ b/app/views/storytime_admin/application/index.html.haml
@@ -3,8 +3,8 @@
     .scroll-panel-header
       = link_to '#', class: "btn btn-default btn-icon pull-left visible-xs visible-sm", data: { toggle: "off-canvas", target: "#dashboard-nav" } do
         %i.icon-st-icons-st-logo
-      = link_to "New #{model_name}", [:new, model_sym], class: "btn btn-sm btn-primary btn-outline pull-right"
-      %h3.scroll-panel-title= model_name.pluralize
+      = link_to "New #{model_display_name}", [:new, model_sym], class: "btn btn-sm btn-primary btn-outline pull-right"
+      %h3.scroll-panel-title= model_display_name_pluralized
     .scroll-panel-body
       = render 'table'
       = paginate @collection, theme: 'twitter-bootstrap-3'
