--- a/app/views/storytime_admin/application/new.html.haml
+++ b/app/views/storytime_admin/application/new.html.haml
@@ -4,6 +4,6 @@
       = link_to '#', class: "btn btn-default btn-icon pull-left visible-xs visible-sm", data: { toggle: "off-canvas", target: "#dashboard-nav" } do
         %i.icon-st-icons-st-logo
       = link_to "Cancel", model, class: "btn btn-default btn-sm pull-right"
-      %h3.scroll-panel-title New #{model_name}
+      %h3.scroll-panel-title New #{model_display_name}
     .scroll-panel-body
       = render "form"
