--- a/app/views/storytime_admin/application/_form.html.haml
+++ b/app/views/storytime_admin/application/_form.html.haml
@@ -1,5 +1,5 @@
-= simple_form_for @model do |f|
+= simple_form_for polymorphic_route_components(@model) do |f|
   = f.error_notification
   = render 'fields', f: f
   = f.submit "Save", class: "btn btn-primary btn-outline"
-  = link_to "Cancel", model, class: "btn btn-link"
+  = link_to "Cancel", polymorphic_route_components(model), class: "btn btn-link"
