--- a/app/views/storytime_admin/application/_object.html.haml
+++ b/app/views/storytime_admin/application/_object.html.haml
@@ -1,3 +1,3 @@
-%tr.table-row-link{ data: { url: url_for([:edit, object]) } }
+%tr.table-row-link{ data: { url: url_for([:edit, *polymorphic_route_components(object)]) } }
   = render 'row', object: object
-  %td.text-right= link_to icon('trash-o'), object, class: "btn btn-sm btn-outline btn-danger", id: "delete_#{model_sym.to_s}_#{object.id}", method: :delete, data: { confirm: "Are you sure you want to delete this #{model_display_name}?" }
+  %td.text-right= link_to icon('trash-o'), polymorphic_route_components(object), class: "btn btn-sm btn-outline btn-danger", id: "delete_#{model_sym.to_s}_#{object.id}", method: :delete, data: { confirm: "Are you sure you want to delete this #{model_display_name}?" }
