--- a/app/views/storytime_admin/application/edit.html.haml
+++ b/app/views/storytime_admin/application/edit.html.haml
@@ -3,7 +3,7 @@
     .scroll-panel-header
       = link_to '#', class: "btn btn-default btn-icon pull-left visible-xs visible-sm", data: { toggle: "off-canvas", target: "#dashboard-nav" } do
         %i.icon-st-icons-st-logo
-      = link_to "Cancel", model, class: "btn btn-default btn-sm pull-right"
+      = link_to "Cancel", polymorphic_route_components(model), class: "btn btn-default btn-sm pull-right"
       %h3.scroll-panel-title Edit #{model_display_name}
     .scroll-panel-body
       = render "form"
