Refactor sortable headers based on feedback

--- a/app/views/storytime_admin/application/_headers.html.haml
+++ b/app/views/storytime_admin/application/_headers.html.haml
@@ -1,5 +1,3 @@
 - index_attr.each do |attribute|
   %th{:class => "sort_by"}
-    %a{:href => setup_column_sort(attribute.parameterize)}
-      = attribute.titleize
-      = attribute_sort_arrow(attribute.parameterize)
+    = sortable(attribute.parameterize)
