add ability to specify how to sort index table columns

--- a/app/views/storytime_admin/application/_headers.html.haml
+++ b/app/views/storytime_admin/application/_headers.html.haml
@@ -1,3 +1,3 @@
-- index_attr.each do |attribute|
+- index_attr.each do |sort, attribute|
   %th{:class => "sort_by"}
-    = sortable(attribute.parameterize)
+    = sortable(sort, attribute.titleize)
