--- a/app/views/storytime_admin/application/index.html.haml
+++ b/app/views/storytime_admin/application/index.html.haml
@@ -6,6 +6,8 @@
       = link_to "New #{model_display_name}", [:new, model_sym], class: "btn btn-sm btn-primary btn-outline pull-right"
       %h3.scroll-panel-title= model_display_name_pluralized
     .scroll-panel-body
+      = render 'search'
+
       = render 'table'
       = paginate @collection, theme: 'twitter-bootstrap-3'
       %p= link_to "Download CSV", [storytime_admin, model, format: :csv]
