--- a/app/views/storytime_admin/application/index.html.haml
+++ b/app/views/storytime_admin/application/index.html.haml
@@ -6,7 +6,7 @@
       = link_to "New #{model_display_name}", [:new, model_sym], class: "btn btn-sm btn-primary btn-outline pull-right"
       %h3.scroll-panel-title= model_display_name_pluralized
     .scroll-panel-body
-      = render 'search'
+      = render 'search' if search_keys.length > 0
 
       = render 'table'
       = paginate @collection, theme: 'twitter-bootstrap-3'
